# xcargo

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  PATH_TO_PRODUCTION.md  README.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  xcargo.pub  xcargo.toml  xcargo.toml.example
.github/: CARGO_DIST_TODO.md  LAUNCH_READINESS.md  SECURITY_EVALUATION.md
.github/runbooks/: 01-prepare-release.md  02-create-release.md  03-verify-release.md  04-hotfix-release.md  README.md
.github/workflows/: self-host-test.yml
.github/workflows/templates/: multi-target-build.yml  parallel-builds.yml
docs/: PLUGIN_DEVELOPMENT.md  README.md  docusaurus.config.ts  installation.md  intro.md  package-lock.json  quick-start.md  sidebars.ts
docs/architecture/: build-strategy.md
docs/design/: container-enhancements.md  philosophy.md  tier-system.md
docs/docs/api/: errors.md  overview.md  requirements.md  target.md
docs/docs/architecture/: container-runtime.md  overview.md  target-detection.md  toolchain-management.md
docs/docs/design/: container-strategy.md  native-first.md  trade-offs.md
docs/docs/guides/: basic-usage.md  target-management.md
docs/docs/reference/: environment-variables.md
docs/examples/ci/: README.md  gitlab-ci.yml
docs/guides/: ci-cd-integration.md  container-security.md  cross-compilation.md
docs/plugins/: clacks-overhead.js
docs/reference/: cli-commands.md  configuration.md  targets.md
docs/research/: BINARY_SIGNATURES.md  BUNDLED_TOOLCHAINS.md  MACOS_TOOLCHAINS_RESEARCH.md  SIGNING_SETUP.md  TOOLCHAIN_TESTING_FINDINGS.md  WINDOWS_TOOLCHAINS_RESEARCH.md
examples/: apex.toml.example  basic_build.rs  output_demo.rs  target_info.rs  toolchain_info.rs
examples/plugins/: metrics_plugin.rs  notification_plugin.rs
src/: lib.rs  main.rs
src/config/: discovery.rs  mod.rs
src/container/: images.rs  mod.rs  runtime.rs
src/error/: mod.rs  suggestions.rs
src/output/: mod.rs
src/plugin/: context.rs  hooks.rs  mod.rs  registry.rs  traits.rs
src/toolchain/: mod.rs  zig.rs
tests/: build_parallel.rs  cli.rs  config_setup_tests.rs  doctor_display_tests.rs  error.rs  executor_container_tests.rs  executor_coverage.rs  executor_linker_tests.rs  executor_zig_tests.rs  integration_builds.rs  main_comprehensive_coverage.rs  main_error_handling_tests.rs  target_advanced_tests.rs
