[package]
name = "xcargo"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Ibrahim Cesar <email@ibrahimcesar.com>"]
license = "MIT"
description = "Cross-compilation, zero friction - Rust cross-compilation tool with automatic toolchain management"
homepage = "https://ibrahimcesar.github.io/xcargo"
repository = "https://github.com/ibrahimcesar/xcargo"
documentation = "https://docs.rs/xcargo"
keywords = ["cross-compilation", "build", "toolchain", "cargo", "rustup"]
categories = ["command-line-utilities", "development-tools::build-utils"]
readme = "README.md"
exclude = [
    "docs/*",
    ".github/*",
    ".vscode/*",
    "*.log",
]

[lib]
name = "xcargo"
path = "src/lib.rs"

[[bin]]
name = "xcargo"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system
walkdir = "2.5"

# Process execution
which = "6.0"

# Terminal output
colored = "2.1"
indicatif = "0.17"

# Future: Container runtime
# youki = { version = "0.3", optional = true }

# Future: HTTP for downloading toolchains
# reqwest = { version = "0.11", features = ["blocking"], optional = true }

# Future: Compression
# flate2 = "1.0"
# tar = "0.4"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = []

# Container runtime
container = [] # ["dep:youki"]

# Toolchain downloading
download = [] # ["dep:reqwest"]

# All features
full = ["container", "download"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[[example]]
name = "basic_build"
path = "examples/basic_build.rs"
