[package]
name = "xcargo"
version = "0.3.0"
edition = "2021"
rust-version = "1.70"
authors = ["Ibrahim Cesar <email@ibrahimcesar.com>"]
license = "MIT"
description = "Cross-compilation, zero friction - Rust cross-compilation tool with automatic toolchain management"
homepage = "https://ibrahimcesar.github.io/xcargo"
repository = "https://github.com/ibrahimcesar/xcargo"
documentation = "https://docs.rs/xcargo"
keywords = ["cross-compilation", "build", "toolchain", "cargo", "rustup"]
categories = ["command-line-utilities", "development-tools::build-utils"]
readme = "README.md"
exclude = [
    "docs/*",
    ".github/*",
    ".vscode/*",
    "*.log",
]

[lib]
name = "xcargo"
path = "src/lib.rs"

[[bin]]
name = "xcargo"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File system
walkdir = "2.5"

# Process execution
which = "6.0"

# Directory utilities
dirs = "5.0"

# Async runtime for parallel builds
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "process"] }

# Terminal output
colored = "2.1"
indicatif = "0.18"
inquire = "0.7"

# Signal handling
ctrlc = "3.4"

# Future: Container runtime
# Note: Currently uses CLI (docker/podman commands)
# Future: Consider bollard (Rust Docker client) or youki (Rust OCI runtime)

# Future: HTTP for downloading toolchains
# reqwest = { version = "0.11", features = ["blocking"], optional = true }

# Future: Compression
# flate2 = "1.0"
# tar = "0.4"

[dev-dependencies]
tempfile = "3.15"
assert_cmd = "2.0"
predicates = "3.1"

[features]
default = []

# Container runtime (uses CLI tools: docker, podman, or youki)
container = []

# Toolchain downloading
download = [] # ["dep:reqwest"]

# All features
full = ["container", "download"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[example]]
name = "basic_build"
path = "examples/basic_build.rs"

[[example]]
name = "notification_plugin"
path = "examples/plugins/notification_plugin.rs"

[[example]]
name = "metrics_plugin"
path = "examples/plugins/metrics_plugin.rs"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.2"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
